# linkedlist

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dev.sh  dll.c  dll.h  main.c  node.c  node.h
.github/workflows/: cmake.yml
apps/: .main.c.swp  CMakeLists.txt  main.c
docs/: CMakeLists.txt  Doxyfile.in  mainpage.md
include/dll/: dll.h  node.h
include/sll/: node.h  sll.h
src/: .dll.c.swp  CMakeLists.txt  dll.c  node.c
src/dll/: CMakeLists.txt  dll.c
src/sll/: CMakeLists.txt  node.c  sll.c
tests/: CMakeLists.txt  check_dll.c  check_node.c
tests/dll/: CMakeLists.txt  check_dll.c  check_node.c
tests/sll/: CMakeLists.txt  check_node.c  check_sll.c
